2nd/Assignments/pr11/error
/Users/yuka/GoogleDrive/School/Subjects/専門科目/実践プログラミング/2nd/pr11/pr11-2.c:116:8: warning: implicitly declaring library function 'strcmp' with type 'int (const char *, const char *)'
                if ( strcmp( input, graph_data[i] ) == 0 )
                     ^
/Users/yuka/GoogleDrive/School/Subjects/専門科目/実践プログラミング/2nd/pr11/pr11-2.c:116:8: note: please include the header <string.h> or explicitly provide a declaration for 'strcmp'
/Users/yuka/GoogleDrive/School/Subjects/専門科目/実践プログラミング/2nd/pr11/pr11-2.c:146:23: warning: passing 'const char [10]' to parameter of type 'char *' discards qualifiers [-Wincompatible-pointer-types-discards-qualifiers]
        return ask_terminal( prompt );
                             ^~~~~~
/Users/yuka/GoogleDrive/School/Subjects/専門科目/実践プログラミング/2nd/pr11/pr11-2.c:123:24: note: passing argument to parameter 'prompt' here
int ask_terminal( char prompt[10] ) {
                       ^
/Users/yuka/GoogleDrive/School/Subjects/専門科目/実践プログラミング/2nd/pr11/pr11-2.c:149:34: error: expected ';' at end of declaration
        const char prompt[10] = "到着"
                                      ^
                                      ;
2 warnings and 1 error generated.
